--- a/tests/Api.Tests.csproj
+++ b/tests/Api.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\api\api.csproj" />
+    <ProjectReference Include="..\api\api.csproj" />
   </ItemGroup>
 
 
