--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -6,7 +6,8 @@ on:
   # pull_request:
   #   branches: ["main"]
 
-permissions: contents:read
+permissions:
+  contents: read
 
 jobs:
   test_and_build:
