i18n(api): add OpenAPI annotations for functions   - enhance API documentation with OpenAPI attributes for better integration
chore(api): conditionally enable JWT middleware
  - add environment variable to control JWT middleware activation

chore(api): update project file with OpenAPI package
  - include Microsoft.Azure.Functions.Worker.Extensions.OpenApi package

refactor(client): update user request to target current user
  - modify updateUserRequest to use `/users/me` endpoint for updating

style(client): enhance layout and modal styling
  - apply max-width constraints and center align content for consistent UI

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="local.settings.json" />
+      <Content Include="local.settings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +22,7 @@
         <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.2" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.5.1" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.5" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
@@ -28,6 +31,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Graph" Version="5.91.0" />
+        <PackageReference Include="Microsoft.OpenApi" Version="1.6.23" />
         <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.5.0" />
     </ItemGroup>
 
