fix(build): correct local.settings.json build action
- change build action for local.settings.json from Content to None to prevent incorrect deployment behavior

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -9,9 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="local.settings.json">
+      <None Include="local.settings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
