--- a/api/api.csproj
+++ b/api/api.csproj
@@ -8,11 +8,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-    <ItemGroup>
-      <None Include="local.settings.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-    </ItemGroup>
+  <ItemGroup>
+    <Content Include="local.settings.json"/>
+  </ItemGroup>
 
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
@@ -34,6 +32,16 @@
         <PackageReference Include="Microsoft.OpenApi" Version="1.6.23" />
         <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.5.0" />
     </ItemGroup>
+
+  <ItemGroup>
+    <None Update="host.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPuplishDirectory>Never</CopyToPuplishDirectory>
+    </None>
+  </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Models\Factories\" />
