feat(notification): implement notification system
- add Notification entity and DTOs
- introduce NotificationRepository and its interface
- create NotificationService and factory for handling business logic
- implement Azure Function endpoints for notification operations
- add database migration for Notifications table and stored procedure

chore: update project configuration

- remove FluentValidation package and related services
- adjust local settings file handling in the project file

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -8,10 +8,6 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="local.settings.json"/>
-  </ItemGroup>
-
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
@@ -37,14 +33,10 @@
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="local.settings.json">
+    <None Include="local.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPuplishDirectory>Never</CopyToPuplishDirectory>
     </None>
   </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Models\Factories\" />
-    </ItemGroup>
 
 </Project>
