chore(api): update local.settings.json inclusion in csproj
- change local.settings.json from None to Content for correct handling
- ensure file is copied to output directory while preserving newest version

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -33,10 +33,10 @@
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="local.settings.json">
+    <Content Include="local.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPuplishDirectory>Never</CopyToPuplishDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
 </Project>
