docs(readme): update project documentation
- enhance technology descriptions for backend and frontend
- add detailed instructions for Azure App Registration and environment configuration
- improve sections on authentication flow and database migrations
- update development workflow and introduce roadmap for future improvements

feat(notifications): enhance notification API and UI integration

- add OpenAPI documentation for notification endpoints
- implement notification creation and retrieval in the frontend
- introduce notification bell with unread count in the UI

refactor(task): change task status property naming

- rename TaskItemStatus to Status for consistency across models
- update related components and services to reflect the new naming convention

style(icons): adjust notification bell icon size

- increase the size of the bell icon for better visibility in the UI

fix(user-service): remove email from update current user method

- simplify user update logic by only allowing name changes
- adjust frontend user edit form to reflect backend changes

build(client): add date-fns library for date manipulation

- include date-fns as a dependency in client package.json
- update package-lock.json to reflect the new library addition

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -8,7 +8,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
   <ItemGroup>
-    <Content Include="local.settings.json"/>
+    <Content Include="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
