--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.6",
+    "date-fns": "^4.1.0",
     "react": "^18.1.1",
     "react-dom": "^18.1.1",
     "react-hook-form": "^7.62.0",
