chore(ci): add dummy local.settings.json in workflow
- create a dummy local.settings.json file for CI environment setup

--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -17,6 +17,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Create dummy local.settings.json
+        run: echo "{}" > api/local.settings.json
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
