--- a/api/api.csproj
+++ b/api/api.csproj
@@ -34,7 +34,7 @@
     </ItemGroup>
 
   <ItemGroup>
-    <None Update="host.json">
+    <None Include="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
